--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdn.jsdelivr.net">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -44,29 +42,52 @@
     </div>
     </div></nav>
     
-     <div class="container">
-        <form action="/start_test" method="POST">
-          <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Name</label>
-    <input type="naem" class="form-control" id="per" name="name" aria-describedby="perHelp">
-  <div class="mb-3">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  
-    <label for="exampleInputPassword1" class="form-label">Invitation Code</label>
-    <input type="invitation_code" class="form-control" id="exampleInputPassword1" name="invitation_code">
-  </div>
-  
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+
+
+    <div class="container my-3">
+    <h1>Your Dashboard</h1>
+    {% if allUser == []%}
+      <div class="alert alert-dark" role="alert" role="alert">
+        No Test participant found.
     </div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      {% else %}
+     <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">S.No.</th>
+      <th scope="col">Name</th>
+      <th scope="col">email id</th>
+      <th scope="col">Invitation Code</th>
+      <th scope="col">TimeStamp</th>
+      <th scope="col">photos</th>
+    </tr>
+  </thead>
+  <tbody>
+    
+    {% for user in alluser %}
+      {%set s="https://console.cloudinary.com/console/c-7cdcee41964ed80ff4406e85c0026f/media_library/search?q=%7B%22searchByFolders%22%3A%5B%22images%2F"+user.sno|string+"%22%5D%7D"%}
+      <tr>
+      <th scope="row">{{loop.index}}</th>
+      <td>{{user.name}}</td>
+      <td>{{user.email}}</td>
+      <td>{{user.invitation_code}}</td>
+      <td>{{user.date_created}}</td>
+      <td>
+       <a href={{s}} type="button" class="btn btn-outline-dark btn-sm mx-1">Click Here for cloud storage</a>
+       <a href="/user_image/{{user.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Click Here for database storage</a>
+      </td>
+
+      </tr>
+    {% endfor %}
+    </tbody>
+</table>
+    {% endif %}
+    
+    
   
+  </div>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
+  </body>
 </html>
