solved the error of camera

--- a/templates/camera.html
+++ b/templates/camera.html
@@ -48,23 +48,7 @@
     </style>
   </head>
   <body>
-    <form id="my-form">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required /><br />
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required /><br />
-
-      <label for="invitation_code">Invitation code:</label>
-      <input
-        type="invitation_code"
-        id="invitation_code"
-        name="invitation_code"
-        required
-      /><br />
-
-      <input type="submit" value="Start Test" />
-    </form>
-    <script src="index.js"></script>
+    <video id="video" autoplay></video>
+    <script src="{{url_for('static', filename='camera.js')}}"></script>
   </body>
 </html>
